# robot-parser

./: .gitignore  CMakeLists.txt  README.md
data/: AdditionnalData_Bottom.maple  AdditionnalData_Top.maple  LagrangianModel_Bottom.txt  LagrangianModel_Top.txt  SomeDefinitions_Bottom.txt  SomeDefinitions_Top.txt  openhrp_header.wrl  srdf_Top_part1.txt  srdf_Top_part2.txt
data/romeo/: bodynametourdf.txt  bodynametovrml.txt  bodynametovrml_BV.txt  camera.txt  footDimensions.h  srdf_Top.txt  tag_to_bodyname.txt
data/sample/: bodynametourdf.txt  bodynametovrml.txt  bodynametovrml_BV.txt
src/: footDimensions.h  main-romeo.cpp  main.cpp  matrix3.h  matrix_operation.hxx  parseExcel.cpp  parseWRL.cpp  robot.h  robotParser.h  tools.cpp  tools.h  vector3.h  writeAmelif.cpp  writeAmelif.h  writeMaple.cpp  writeMaple.h  writeOpenHRP.cpp  writeOpenHRP.h  writeUrdf.cpp
